[package]
name = "flem-serial-rs"
version = "0.2.2"
edition = "2021"
authors = ["Austin McElroy <mcelroy.austin@gmail.com>"]
description = "A serial port implementation of the FLEM protocol for host computers running Windows, Linux, or MacOS."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.2"
flem = "0.6"

